[gd_scene load_steps=23 format=3 uid="uid://dhtt1sunmp6tr"]

[ext_resource type="MeshLibrary" uid="uid://dad42sw0f4afa" path="res://Assets/Tile Sets/tileSet.tres" id="1_nrea6"]
[ext_resource type="Script" path="res://Scripts/instancer.gd" id="2_26ana"]
[ext_resource type="PackedScene" uid="uid://cl782vs3tgpgy" path="res://Assets/Prefabs/invisible.tscn" id="3_w0d8i"]
[ext_resource type="Script" path="res://Scripts/animatePillars.gd" id="4_wia41"]
[ext_resource type="Script" path="res://Scripts/playerMovement.gd" id="5_txvlx"]
[ext_resource type="Environment" uid="uid://b6e7ydi8600yb" path="res://Assets/Environments/Library.tres" id="6_k86my"]
[ext_resource type="Script" path="res://Scripts/cameraMovement.gd" id="7_6qnms"]
[ext_resource type="Script" path="res://Scripts/actionable.gd" id="8_1unjb"]
[ext_resource type="Resource" uid="uid://bxg1svmf4p4tw" path="res://Dialogue/PillarClue.dialogue" id="9_2psa1"]
[ext_resource type="Script" path="res://Scripts/lookAtPlayer.gd" id="10_knadl"]
[ext_resource type="Material" uid="uid://bnj7x1ybf6fpy" path="res://Assets/Materials/Characters/test_character.tres" id="11_yu0rn"]

[sub_resource type="Curve" id="Curve_ay5xt"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_5pkt8"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 1.4, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_x6p1d"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_mdgxm"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 1.4, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_u7dom"]
_data = [Vector2(0, 0), 0.0, 1.0, 0, 1, Vector2(1, 1), 1.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_kf3x4"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_ou3iv"]
_data = [Vector2(0, 0), 0.0, -0.245637, 0, 0, Vector2(0.321053, 0), 0.835163, 0.835163, 0, 0, Vector2(1, 1), 0.0, -1.04401, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_kfd2c"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.347368, 0.461538), 2.71429, 2.71429, 0, 0, Vector2(0.673684, 1), 0.0, 0.0, 0, 0, Vector2(0.857895, 0.285714), -4.42146, -4.42146, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_16tlw"]
height = 0.297069

[sub_resource type="BoxShape3D" id="BoxShape3D_p4702"]

[sub_resource type="PlaneMesh" id="PlaneMesh_8loid"]
size = Vector2(0.4, 0.8)
orientation = 0

[node name="Test Scene2" type="Node3D"]

[node name="Lights" type="Node" parent="."]

[node name="Sun" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(0.773345, -0.308728, 0.553737, -0.221585, 0.686715, 0.692332, -0.594002, -0.658111, 0.462658, 0, 0, 0)
light_color = Color(0.866596, 0.896817, 0.910898, 1)
shadow_enabled = true
shadow_bias = 0.0
shadow_normal_bias = 10.0
shadow_reverse_cull_face = true
shadow_opacity = 0.85
shadow_blur = 2.878

[node name="Ambient" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(-0.647531, 0.53143, -0.546154, -0.761076, -0.414986, 0.498549, 0.038299, 0.738491, 0.673176, 1, -1, 0)
light_color = Color(0.48711, 0.773725, 0.968343, 1)
light_energy = 0.4
sky_mode = 1

[node name="SpotLight3D4" type="SpotLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -7.46513, -1.91777, -26.485)
light_color = Color(0.880226, 0.787688, 0.747433, 1)
light_energy = 5.0
spot_range = 6.83
spot_angle = 31.39

[node name="Maps" type="Node" parent="."]

[node name="pillarAnimator" type="Node" parent="Maps"]
script = ExtResource("4_wia41")
animationTime = 0.1
activateCurve = SubResource("Curve_ay5xt")
deactivateCurve = SubResource("Curve_5pkt8")

[node name="Empty" type="GridMap" parent="Maps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh_library = ExtResource("1_nrea6")
cell_size = Vector3(1, 1, 1)
cell_octant_size = 128
cell_center_x = false
cell_center_y = false
cell_center_z = false
cell_scale = 0.5
script = ExtResource("2_26ana")
pillarIndex = 7
hiddenPillarIndex = 8
pillarPrefab = ExtResource("3_w0d8i")
metadata/_editor_floor_ = Vector3(0, -2, 0)

[node name="Tutorial" type="GridMap" parent="Maps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh_library = ExtResource("1_nrea6")
cell_size = Vector3(1, 1, 1)
cell_octant_size = 128
cell_center_x = false
cell_center_y = false
cell_center_z = false
cell_scale = 0.5
data = {
"cells": PackedInt32Array(-65537, 1, 2, -65537, 0, 2, -65537, 65535, 2, -131072, 65535, 2, -131072, 0, 2, -131071, 0, 2, -131072, 1, 2, -131071, 1, 2, -131071, 65535, 2, -2, 1, 1441793, -2, 0, 1441794, -2, 65535, 1441793, -65534, 65535, 1441793, -65534, 1, 1441793, -65534, 0, 1441794, -1, 2, 1441793, -65536, 2, 1441794, -65535, 2, 1441793, -131072, 65534, 1441793, -131072, 65533, 1441793, -131072, 65532, 1441793, -1, 65532, 1441792, -65535, 65532, 1441792, -65536, 65532, 1441799, -65534, 65533, 1441793, -65534, 65534, 1441794, -131071, 65534, 1441793, -131071, 65533, 1441793, -65537, 65533, 1441793, -65537, 65534, 1441793, -2, 65533, 1441793, -2, 65534, 1441794, -1, 1, 1441793, -65535, 1, 1441793, -1, 65531, 1, -1, 65530, 6, -65535, 65531, 1, -65535, 65530, 1, -65535, 65529, 1, -1, 65529, 1, -131072, 65531, 1, -131072, 65530, 1, -131072, 65529, 6, -131072, 65528, 6, -2, 65531, 6, -2, 65530, 6, -2, 65529, 0, -65537, 65528, 6, -65538, 65528, 6, -131072, 65527, 6, -131072, 65526, 6, -131071, 65528, 6, -131071, 65526, 1, -131070, 65526, 1, -131069, 65526, 1, -131070, 65527, 1, -131070, 65528, 1, -65534, 65529, 1, -1, 65527, 1, -65536, 65525, 0, -1, 65526, 1, -65535, 65525, 1, -65534, 65525, 2, -65533, 65527, 1, -65533, 65528, 1, -65532, 65526, 2, -65533, 65525, 1, -131071, 65527, 0, -65535, 65527, 0, -65537, 65529, 6, -131071, 65529, 6, -65537, 65527, 6, -65537, 65526, 6, -2, 65527, 1, -65538, 65527, 6, -65538, 65529, 6, -65535, 65534, 1048581, -65535, 65535, 1048580, -196614, 65510, 1441793, -196614, 65511, 1441793, -196613, 65511, 1441793, -196612, 65512, 1441793, -196610, 65514, 1441792, -196614, 65508, 1441793, -196614, 65509, 1441793, -196616, 65511, 1441793, -65539, 65528, 1441793)
}
script = ExtResource("2_26ana")
pillarIndex = 7
hiddenPillarIndex = 8
pillarPrefab = ExtResource("3_w0d8i")
metadata/_editor_floor_ = Vector3(0, -1, 0)

[node name="Maze 1" type="GridMap" parent="Maps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh_library = ExtResource("1_nrea6")
cell_size = Vector3(1, 1, 1)
cell_octant_size = 128
cell_center_x = false
cell_center_y = false
cell_center_z = false
cell_scale = 0.5
data = {
"cells": PackedInt32Array(-65540, 65528, 1441793, -65541, 65528, 1441793, -65541, 65527, 1441796, -131077, 65526, 1441796, -196613, 65525, 1441796, -262149, 65524, 1441793, -262149, 65523, 1441793, -262149, 65522, 1441793, -262149, 65521, 1441793, -262149, 65520, 1441793, -262149, 65519, 1441793, -262149, 65518, 1441793)
}
script = ExtResource("2_26ana")
pillarIndex = 7
hiddenPillarIndex = 8
pillarPrefab = ExtResource("3_w0d8i")
metadata/_editor_floor_ = Vector3(0, -2, 0)

[node name="Easy" type="GridMap" parent="Maps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -6.5, -20)
mesh_library = ExtResource("1_nrea6")
cell_size = Vector3(1, 1, 1)
cell_octant_size = 128
cell_center_x = false
cell_center_y = false
cell_center_z = false
cell_scale = 0.5
data = {
"cells": PackedInt32Array(0, 0, 1, 1, 0, 1, 1, 65535, 1, 0, 65535, 1, 65535, 65535, 1, 65535, 0, 1, 65533, 65529, 1441794, 65533, 65530, 1441794, 65533, 65531, 1441793, 65533, 65532, 1441794, 65533, 65533, 6, 65533, 65534, 1441794, 65534, 65529, 1441794, 65534, 65531, 1441793, 65534, 65532, 6, 65534, 65533, 6, 65534, 65534, 6, 65535, 65529, 1441793, 65535, 65530, 1441793, 65535, 65531, 6, 65535, 65532, 6, 65535, 65533, 6, 65535, 65534, 6, 0, 65529, 1441793, 0, 65530, 1441793, 0, 65531, 6, 0, 65532, 1441794, 0, 65533, 6, 0, 65534, 6, 1, 65529, 1441798, 1, 65530, 6, 1, 65531, 6, 1, 65532, 6, 1, 65533, 6, 1, 65534, 6, 2, 65529, 1441794, 2, 65530, 6, 2, 65531, 6, 2, 65532, 6, 2, 65533, 6, 2, 65534, 1441794, 3, 65529, 6, 3, 65530, 6, 3, 65531, 6, 3, 65532, 6, 3, 65533, 6, 3, 65534, 6, 65536, 65535, 1441796, 65537, 65535, 1441792, 131071, 65535, 1441792, 65537, 0, 1441793, 65536, 0, 1441793, 131071, 0, 1441793, 131070, 65535, 1441793, 131069, 65535, 1441792, 131068, 65535, 1441793, 131068, 65534, 1441793, 131068, 65533, 1441793, 131068, 65532, 1441792, 131068, 65531, 1441793, 131068, 65530, 1441793, 131068, 65529, 1441793, 131068, 65528, 1441793, 131069, 65528, 1441793, 131070, 65528, 1441793, 131071, 65528, 1441793, 65536, 65528, 1441793, 65537, 65528, 1441793, 65538, 65528, 1441792, 65539, 65528, 1441793, 65540, 65528, 1441793, 65540, 65529, 1441793, 65540, 65531, 1441793, 65540, 65532, 1441793, 65540, 65533, 1441793, 65540, 65534, 1441793, 65540, 65535, 1441793, 65539, 65535, 1441793, 65538, 65535, 1441793, 131071, 65531, 1441793, 65536, 65531, 1441792, 65537, 65532, 1441793, 65539, 65534, 1441792, 65532, 65534, 1441794, 131071, 65529, 1441795, 131071, 65530, 1441795, 65532, 65530, 1441794, 4, 65530, 1441793, 5, 65530, 1441793, 65536, 1, 1441793, 65534, 65528, 1441793, 65535, 65528, 1441793, 0, 65528, 1441793, 1, 65528, 1441793, 2, 65528, 1441793, 3, 65528, 1441793, 4, 65529, 1441793, 4, 65528, 1441793, 4, 65531, 1441793, 4, 65532, 1441793, 4, 65533, 1441793, 4, 65534, 1441793, 4, 65535, 1441793, 3, 65535, 1441793, 2, 65535, 1441793, 65534, 65535, 1441793, 65533, 65535, 1441793, 65532, 65531, 1441793, 65532, 65532, 1441793, 65532, 65533, 1441793, 196606, 65535, 1441793, 131074, 65535, 1441793, 131075, 65535, 1441794, 196605, 65535, 1441794, 131076, 65531, 1441794, 131072, 65528, 1441794, 131075, 65528, 1441794, 131076, 65529, 1441793, 131076, 65528, 1441793, 131074, 65528, 1441793, 131073, 65528, 1441793, 196607, 65528, 1441793, 196606, 65528, 1441793, 196605, 65528, 1441793, 196604, 65528, 1441793, 196604, 65529, 1441793, 196604, 65530, 1441793, 196604, 65531, 1441793, 196606, 65531, 1441794, 196604, 65532, 1441793, 196604, 65533, 1441793, 196604, 65534, 1441793, 196604, 65535, 1441793, 131076, 65535, 1441793, 131076, 65534, 1441793, 131076, 65532, 1441792, 131076, 65533, 1441792, 131069, 65531, 1441795, 65534, 65530, 1441793, 131069, 65533, 1441799)
}
script = ExtResource("2_26ana")
pillarIndex = 7
hiddenPillarIndex = 8
pillarPrefab = ExtResource("3_w0d8i")
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="Maze 2" type="GridMap" parent="Maps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.5, -26)
mesh_library = ExtResource("1_nrea6")
cell_size = Vector3(1, 1, 1)
cell_octant_size = 128
cell_center_x = false
cell_center_y = false
cell_center_z = false
cell_scale = 0.5
data = {
"cells": PackedInt32Array(1, 0, 4, 2, 0, 4, 3, 0, 4, 4, 0, 4, 5, 0, 4, 6, 0, 4, 7, 0, 4, 8, 0, 4, 9, 0, 4, 10, 0, 4, 11, 0, 4, 12, 0, 4, 13, 0, 4, 14, 0, 4, 15, 0, 4, 16, 0, 4, 17, 0, 4, 18, 0, 4, 19, 0, 1, 20, 0, 2, 196628, 65502, 4, 131092, 65503, 4, 65556, 65504, 4, 20, 65505, 4, 20, 65535, 1, 20, 65534, 4, 20, 65533, 4, 20, 65532, 4, 20, 65531, 4, 20, 65530, 4, 20, 65529, 4, 20, 65528, 4, 20, 65527, 4, 20, 65526, 4, 20, 65525, 4, 20, 65524, 4, 20, 65523, 4, 20, 65522, 4, 20, 65521, 4, 20, 65520, 4, 20, 65519, 4, 20, 65518, 4, 20, 65517, 4, 20, 65516, 4, 20, 65515, 4, 20, 65514, 4, 20, 65513, 4, 20, 65512, 4, 20, 65511, 4, 20, 65510, 4, 20, 65509, 4, 20, 65508, 4, 20, 65507, 4, 20, 65506, 4)
}
script = ExtResource("2_26ana")
pillarIndex = 7
hiddenPillarIndex = 8
pillarPrefab = ExtResource("3_w0d8i")
metadata/_editor_floor_ = Vector3(0, 6, 0)

[node name="Medium" type="GridMap" parent="Maps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, -3.5, -62)
mesh_library = ExtResource("1_nrea6")
cell_size = Vector3(1, 1, 1)
cell_octant_size = 128
cell_center_x = false
cell_center_y = false
cell_center_z = false
cell_scale = 0.5
data = {
"cells": PackedInt32Array(0, 0, 1, 65534, 65534, 1, 65534, 65535, 1, 65534, 0, 1, 65535, 65534, 1, 65535, 65535, 1, 65535, 0, 1, 0, 65534, 1, 0, 65535, 1, 1, 65534, 1, 1, 65535, 1, 1, 0, 1, 2, 65534, 1, 2, 65535, 1, 2, 0, 1, 3, 65535, 1, 3, 65534, 1, 3, 65533, 1, 2, 65533, 2, 65533, 65535, 1, 65533, 65534, 1, 65533, 65533, 1441793, 0, 65533, 1441796, -2, 65533, 1441798, -2, 65532, 1441798, -1, 65532, 1441798, -1, 65533, 1441798, -65536, 65533, 1441798, -65536, 65532, 1441798, -65535, 65532, 1441798, -65535, 65533, 1441798, -65534, 65532, 1441798, -65533, 65532, 1441798, -65533, 65531, 1441798, -65533, 65530, 1441798, -65534, 65530, 1441798, -65535, 65530, 1441798, -65535, 65531, 1441798, -65534, 65531, 1441798, -65536, 65531, 1441798, -1, 65531, 1441798, -2, 65531, 1441798, -3, 65531, 1, -3, 65532, 1, -3, 65530, 1, -2, 65530, 1441798, -1, 65530, 1441798, -65536, 65530, 1441798, -3, 65529, 1, -2, 65529, 1441798, -1, 65529, 1441798, -65536, 65529, 1441798, -65535, 65529, 1441798, -65534, 65529, 1441798, -65533, 65529, 1441798, -65533, 65528, 1441798, -65534, 65528, 1441798, -65535, 65527, 1441798, -65536, 65527, 1441798, -1, 65527, 1441798, -1, 65528, 1441798, -65536, 65528, 1441798, -65535, 65528, 1441798, -2, 65528, 1441798, -3, 65528, 1, -3, 65527, 1, -2, 65527, 1441798, -65534, 65527, 1441798, -65533, 65527, 1441798, 1, 65527, 1441792, -65536, 65526, 1441798, -1, 65526, 1441798, 1, 65526, 1441793, 65535, 65525, 1441793, 0, 65525, 1441793, 65534, 65526, 1441793, 65535, 65529, 1441794, 65533, 65527, 1, 65533, 65528, 2, 65533, 65529, 1, 65533, 65530, 1, 65533, 65531, 1, 65534, 65531, 1, 65534, 65532, 2, 65534, 65533, 1441793, 65533, 65532, 1, -2, 65526, 1, -2, 65525, 1, -1, 65525, 1, -65536, 65525, 1, -65535, 65526, 1, -65535, 65525, 1, -65534, 65526, 1, -65533, 65526, 1, -65532, 65530, 1, -65532, 65531, 1, -65532, 65532, 1, -65534, 65533, 1, -65533, 65533, 1, -65532, 65533, 1, -2, 65534, 1, -1, 65534, 1, -65536, 65534, 1, -65535, 65534, 1, -65534, 65534, 1, -3, 65534, 1, -3, 65533, 1, -3, 65526, 1, 4, 65530, 1, 4, 65533, 1, 131070, 65531, 1, 131069, 65531, 1, 131069, 65532, 1, 131070, 65532, 1, 131069, 65530, 1, 131069, 65529, 1, 131069, 65528, 1, 131069, 65527, 1, 131070, 65525, 1, 131070, 65526, 1, 131071, 65525, 1, 65536, 65525, 1, 65537, 65526, 1, 65537, 65527, 0, 131071, 65526, 0, 65536, 65526, 0, 65540, 65526, 1, 65540, 65527, 1, 65540, 65528, 1, 65540, 65529, 1, 65540, 65530, 1, 65540, 65531, 1, 65540, 65532, 1, 65540, 65533, 1, 131069, 65533, 1, 131068, 65534, 1, 131068, 65535, 1, 131069, 0, 1, 131070, 1, 1, 131071, 1, 1, 0, 1, 1, 65537, 1, 1, 65538, 1, 1, 65539, 0, 1, 65540, 65535, 1, 65540, 65534, 1, 2, 65526, 1048577, 2, 65525, 1048578, 65537, 65525, 655364, 1, 65525, 655361, 196606, 65525, 1441793, 196607, 65525, 655361, 196607, 65526, 655361, 196606, 65526, 655361, 65536, 65524, 655361, 131072, 65524, 1048580, 65538, 65527, 5, 65539, 65527, 5, 131076, 65526, 1, 131076, 65528, 1, 131077, 65527, 1, 65535, 65533, 1, 65535, 65532, 2, 1, 65533, 1, 131071, 0, 1, 131070, 65535, 1, 131070, 65534, 1, 131070, 65533, 1, 65538, 0, 1, 65539, 65535, 1, 65539, 65534, 1, 65539, 65533, 1, 131076, 65534, 1, 131076, 65533, 1, 131076, 65532, 1, 131076, 65531, 1, 131076, 65530, 1, 131076, 65529, 1, 131075, 65535, 1, 131075, 0, 1, 131074, 1, 1, 131073, 1, 1, 196607, 1, 1, 196606, 1, 1, 196606, 0, 1, 196606, 65535, 1, 196605, 65535, 1, 196605, 65534, 1, 196604, 65534, 1, 196604, 65533, 1, 196604, 65532, 1, 196604, 65531, 1, 196604, 65530, 1, 196605, 65530, 1, 196605, 65529, 1, 131072, 65523, 1, 196607, 65524, 1, 65537, 65524, 1, 65538, 65524, 1, 131075, 65524, 1, 131074, 65524, 1, 131073, 65524, 1, 196609, 65524, 1, 65535, 65531, 1, 4, 65531, 1, 4, 65532, 1, -65532, 65527, 6, -65532, 65528, 6, -65532, 65529, 6, -65531, 65527, 2, -65531, 65528, 2, -65531, 65529, 2, -65531, 65530, 2, -65531, 65526, 2, -65532, 65526, 2, 5, 65527, 1, 5, 65528, 2, 5, 65529, 1, 4, 65526, 1, 3, 65526, 1048580, 3, 65525, 1048577, 65540, 65525, 1048577, 65539, 65524, 1048577, 131076, 65525, 1048577, 3, 65532, 1048577, 3, 65531, 1048578, 0, 65530, 7, 131073, 65523, 1, 131072, 65522, 1, 131073, 65522, 1, 131072, 65521, 6, 131073, 65521, 6, 131074, 65521, 6, 196608, 65520, 1048580, 196608, 65519, 1048582, 196608, 65518, 1048582, 196609, 65518, 1048582, 196609, 65519, 1441793, 262143, 65519, 1048582, 262142, 65519, 1048578, 262142, 65518, 1048578, 262143, 65518, 1048582, 327679, 65518, 1048583, 196610, 65518, 655364, 196609, 65517, 1048581, 196609, 65516, 1048581, 196609, 65515, 1048581, 196609, 65514, 1048581, 196606, 65517, 1048577, 196606, 65516, 1048577, 196606, 65515, 1441793, 196607, 65516, 1048577, 196607, 65517, 1441793, 196606, 65514, 1441793, 196607, 65514, 1048582, 196607, 65515, 1048582, 131072, 65515, 1048582, 131072, 65514, 1048582, 131072, 65516, 1048582, 131072, 65517, 1048582, 131073, 65517, 1048582, 131073, 65516, 1048582, 131073, 65515, 1048582, 131073, 65514, 1048582, 131074, 65517, 1048582, 131074, 65516, 1048582, 131074, 65515, 1048582, 131074, 65514, 1048582, 196610, 65515, 1048583, 262141, 65516, 1048577, 262141, 65515, 1048577, 262141, 65514, 1048577, 262141, 65513, 1048577, 262142, 65513, 1048577, 262143, 65513, 1048577, 196608, 65513, 1048577, 196609, 65513, 1048577, 196610, 65513, 1048577, 196611, 65513, 1048577, 131075, 65514, 1048582, 131075, 65516, 1048582, 131075, 65517, 1048582, 131075, 65515, 1048582, 131075, 65518, 1048582, 131074, 65518, 1048582, 131074, 65519, 1048582, 131075, 65519, 1048582, 131073, 65519, 1048582, 131073, 65520, 1048582, 131072, 65520, 1048582, 131074, 65520, 1048582, 131072, 65519, 1048582, 196607, 65520, 1048582, 196607, 65519, 1048582, 131076, 65515, 655364, 131077, 65516, 1441796, 65540, 65515, 1441798, 65541, 65515, 1441798, 65541, 65516, 1441798, 65541, 65514, 1441798, 65541, 65513, 1441798, 65542, 65513, 1441798, 65542, 65514, 1441798, 65542, 65515, 1441798, 65543, 65515, 1441798, 65543, 65514, 1441798, 65543, 65513, 1441798, 65543, 65512, 1441798, 65540, 65514, 1441798, 65540, 65513, 1441798, 65540, 65512, 1441798, 65541, 65512, 1441798, 65542, 65512, 1441798, 65539, 65515, 1441798, 65539, 65516, 1441798, 65542, 65516, 1441798, 65540, 65516, 1441798, 65543, 65516, 1441798, 65544, 65516, 1441798, 65544, 65515, 1441798, 65544, 65514, 1441798, 65544, 65513, 1441798, 65544, 65512, 1441798, 131076, 65516, 1441798, 131076, 65514, 1441798, 131076, 65513, 1441798, 131076, 65512, 1441798, 131077, 65512, 1441798, 131078, 65512, 1441798, 131079, 65512, 1441798, 131080, 65512, 1441798, 131080, 65513, 1441798, 131080, 65514, 1441798, 131080, 65515, 1441798, 131080, 65516, 1441798, 131079, 65516, 1441798, 131078, 65516, 1441798, 131077, 65517, 1441798, 131077, 65518, 1441798, 131076, 65518, 1441798, 131076, 65517, 1441798, 131076, 65519, 1441798, 131077, 65519, 1441798, 131078, 65519, 1441798, 131078, 65518, 1441798, 131078, 65517, 1441798, 196612, 65514, 1441793, 196612, 65513, 1441793, 196612, 65512, 1441793, 196613, 65512, 1441793, 196614, 65512, 1441793, 196615, 65512, 1441793, 196616, 65512, 1441793, 196616, 65513, 1441793, 196616, 65514, 1441793, 196616, 65515, 1441793, 196616, 65516, 1441793, 196615, 65516, 1441793, 196614, 65516, 1441793, 196614, 65518, 1441793, 196614, 65519, 1441793, 196614, 65517, 1441793, 196612, 65517, 1441792, 196612, 65516, 1441792, 196612, 65519, 1441792, 196613, 65519, 1441794, 196611, 65520, 1441792, 196610, 65522, 1441792, 196611, 65522, 1441792, 196611, 65521, 1441792, 196610, 65523, 1441793, 196607, 65522, 1441793, 196607, 65523, 1441793, 196607, 65521, 1441798, 262142, 65520, 1441793, 262142, 65521, 1441793, 262142, 65522, 1441793, 262142, 65523, 1441793, 262142, 65524, 1441793, 262142, 65525, 1441793, 196605, 65525, 1441798, 196605, 65524, 1441798, 196605, 65523, 1441793, 196605, 65522, 1441793, 196605, 65521, 1441798, 196605, 65520, 1441798, 196605, 65519, 1441793, 196605, 65518, 1441793, 196605, 65517, 1441793, 196604, 65518, 1441793, 196604, 65519, 1441793, 196604, 65520, 1441793, 196604, 65521, 1441793, 196604, 65522, 1441793, 196604, 65523, 1441793, 196604, 65524, 1441793, 196604, 65525, 1441793, 196606, 65519, 1441793, 196606, 65520, 1441793, 196606, 65521, 1441793, 196606, 65518, 1441793, 196606, 65522, 1441793, 196606, 65523, 1441793, 196606, 65524, 1441793, 262140, 65517, 1441793, 262140, 65518, 1441794, 262140, 65519, 1441793, 262140, 65520, 1441793, 262140, 65521, 1441792, 262140, 65522, 1441792, 262140, 65523, 1441793, 262139, 65523, 1441793, 262139, 65524, 1441793, 262140, 65524, 1441793, 262140, 65525, 1441793, 196605, 65526, 1441793, 196604, 65526, 1441793, 196604, 65527, 1441793, 196604, 65528, 1441793, 262140, 65526, 1441793, 262143, 65517, 1441793, 262143, 65516, 1441793, 262142, 65516, 1441795, 196608, 65517, 1441796, 196605, 65515, 1441793, 196605, 65514, 1441793, 131073, 65518, 1441793, 131072, 65518, 1441793, 196607, 65518, 1441793, 131075, 65513, 1441793, 131074, 65513, 1441793, 131073, 65513, 1441793, 131072, 65513, 1441793, 196607, 65513, 1441793, 196606, 65513, 1441793, 131074, 65522, 1441793, 131075, 65522, 1441793, 131075, 65521, 1441793, 131075, 65520, 1441793, 327678, 65520, 1441793, 327677, 65519, 1441793, 327677, 65518, 1441793, 327677, 65517, 1441793, 327677, 65520, 1441793, 327677, 65521, 1441793, 327677, 65522, 1441793, 327677, 65523, 1441793, 327677, 65524, 1441793, 327677, 65525, 1441793, 262146, 65513, 1441794, 262144, 65513, 1441794)
}
script = ExtResource("2_26ana")
pillarIndex = 7
hiddenPillarIndex = 8
pillarPrefab = ExtResource("3_w0d8i")
metadata/_editor_floor_ = Vector3(0, 4, 0)

[node name="Player" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
script = ExtResource("5_txvlx")
moveTime = 0.35
walkCurve = SubResource("Curve_x6p1d")
slideInCurve = SubResource("Curve_mdgxm")
slideCurve = SubResource("Curve_u7dom")
slideOutCurve = SubResource("Curve_kf3x4")
rotationTime = 0.3
rotationCurve = SubResource("Curve_ou3iv")
mazeMaps = [NodePath("../Maps/Tutorial"), NodePath("../Maps/Maze 1"), NodePath("../Maps/Easy"), NodePath("../Maps/Maze 2"), NodePath("../Maps/Medium")]
iceIndex = 6
stairIndex = 4
pillarIndex = 8

[node name="Camera3D" type="Camera3D" parent="Player"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
environment = ExtResource("6_k86my")
fov = 70.0
near = 0.001
script = ExtResource("7_6qnms")
horizontalDegrees = 3.0
verticalDegrees = 15.0
cameraShake = SubResource("Curve_kfd2c")
cameraShakeIntensity = 0.1

[node name="Direction" type="Marker3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.745335, -1.04541)

[node name="ActionableFinder" type="Area3D" parent="Player/Direction"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/Direction/ActionableFinder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0448093, 0.389606)
shape = SubResource("CylinderShape3D_16tlw")

[node name="Character" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, -2)

[node name="Actionable" type="Area3D" parent="Character"]
script = ExtResource("8_1unjb")
dialogue_resource = ExtResource("9_2psa1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Character/Actionable"]
shape = SubResource("BoxShape3D_p4702")

[node name="Node3D" type="Node3D" parent="Character/Actionable/CollisionShape3D"]
script = ExtResource("10_knadl")
offset = 90.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Character/Actionable/CollisionShape3D/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -0.1, 0)
cast_shadow = 0
mesh = SubResource("PlaneMesh_8loid")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("11_yu0rn")

[connection signal="pillarsInstanced" from="Maps/Empty" to="Maps/pillarAnimator" method="_on_pillars_instanced"]
[connection signal="pillarsInstanced" from="Maps/Tutorial" to="Maps/pillarAnimator" method="_on_pillars_instanced"]
[connection signal="pillarsInstanced" from="Maps/Maze 1" to="Maps/pillarAnimator" method="_on_pillars_instanced"]
[connection signal="pillarsInstanced" from="Maps/Easy" to="Maps/pillarAnimator" method="_on_pillars_instanced"]
[connection signal="pillarsInstanced" from="Maps/Maze 2" to="Maps/pillarAnimator" method="_on_pillars_instanced"]
[connection signal="pillarsInstanced" from="Maps/Medium" to="Maps/pillarAnimator" method="_on_pillars_instanced"]
[connection signal="activatePillar" from="Player" to="Maps/pillarAnimator" method="_on_player_activate_pillar"]
[connection signal="deactivatePillar" from="Player" to="Maps/pillarAnimator" method="_on_player_deactivate_pillar"]
[connection signal="startShake" from="Player" to="Player/Camera3D" method="_on_player_start_shake"]
[connection signal="input_event" from="Character/Actionable" to="Player" method="_on_actionable_input_event"]
